# TypForge

./: .gitignore  Cargo.toml  README.md  alt_prompt.txt  prompt.txt  todo.md
frontend/: index.html  main.js  style.css
src/: main.rs
