[package]
name = "typforge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
openssl = {version = "0.10.69", features = ["vendored"]}
reqwest = {version = "0.12.12", features = ["json"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
tower-http = {version = "0.6.2", features = ["fs"]}
typst = "0.12.0"
typst-as-lib = "0.11.1"
typst-pdf = "0.12.0"
